--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,44 @@
 .message {
+    display: flex;
+    /*align-items: center;*/
+    padding: 10px;
+    background-color: springgreen;
+}
 
+.avatar {
+    align-self: flex-end;
+    width: 50px;
+    height: 50px;
+}
+
+.avatar img {
+    max-width: 100%;
+    border-radius: 50%;
+}
+
+.user_message {
+    display: flex;
+    flex-direction: column;
+    margin-left: 15px;
+
+}
+
+.user_name {
+    color: darkslategray;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.user_text {
+   color: white;
+    font-size: 18px;
+    margin: 0;
+    padding: 0;
+}
+
+.time_stamp {
+    color: darkslategray;
+    opacity: 40%;
+    font-size: 14px;
+    align-self: flex-end;
 }
