--- a/src/Btn.css
+++ b/src/Btn.css
@@ -48,7 +48,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: #111;
+    background: #699cc0;
     left: 0;
     top: 0;
     border-radius: 10px;
