--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,12 +1,26 @@
-.superInput {
+.input:focus {
+    outline: none;
+    border: 2px solid #99ff99;
+}
 
+.superInput {
+    margin: 10px;
+
+    background: #003300;
+    color: #99ff99;
 }
 
 .errorInput {
-    border: 3px solid lime;
-    background: red;
+    margin: 10px;
+
+    border: 3px solid #dd3355;
+
+    background: #003300;
+    color: #99ff99;
 }
 
 .error {
-    color: red;
+    color: #dd3355;
+    height: 21px;
+    margin-left: 10px;
 }
