--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,3 +1,11 @@
+@keyframes blink {
+    0% {
+        left: -130%
+    }
+    100% {
+        left: 130%
+    }
+}
 
 .default {
     background: #003300;
