--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: baseline;
     padding: 15px 15px 25px;
-    background-color: #e1ae89;
+    /*background-color: #e1ae89;*/
     min-height: 150px;
 }
 
