--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: flex-start;
 
-    background-color: #e1ae89;
+    /*background-color: #e1ae89;*/
 }
 
 .error {
