--- a/src/p2-homeworks/h3/Greeting.module.css
+++ b/src/p2-homeworks/h3/Greeting.module.css
@@ -1,37 +1,8 @@
 .greeting {
     display: flex;
-    align-items: flex-start;
-
-    /*background-color: #e1ae89;*/
+    align-items: baseline;
 }
 
-.error {
-    color: red;
-    height: 21px;
-    margin-left: 10px;
-}
-
-.input {
-    margin: 10px;
-
-    background: #003300;
-    color: #99ff99;
-}
-
-.input:focus {
-    /*outline:none;*/
-    border: #99ff99 solid 2px;
-}
-
-.errorInput {
-    margin: 10px;
-
-    background: #003300;
-    color: #99ff99;
-
-    border: 2px solid red;
-    outline: none;
-}
 
 .button {
     margin: 10px;
