--- a/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
+++ b/src/p2-homeworks/h4/common/c1-SuperInputText/SuperInputText.module.css
@@ -1,21 +1,30 @@
+.inputContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.input {
+    margin: 10px;
+    padding: 5px 5px;
+
+    background: #82dada;
+    color: #073807;
+    font-size: larger;
+}
+
 .input:focus {
     outline: none;
-    border: 2px solid #99ff99;
+    border: 3px solid #556060;
 }
 
 .superInput {
-    margin: 10px;
 
-    background: #003300;
-    color: #99ff99;
 }
 
 .errorInput {
-    margin: 10px;
-
     border: 3px solid #dd3355;
 
-    background: #003300;
+    background: #d57689;
     color: #99ff99;
 }
 
