--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,14 +1,33 @@
-@keyframes blink {
-    0% {
-        left: -130%
-    }
-    100% {
-        left: 130%
-    }
+.button {
+    /*display: inline-block;*/
+    text-decoration: none;
+    border: none;
+    padding: 12px 40px;
+    margin: 10px;
+    font-size: 16px;
+    letter-spacing: 2px;
+    background-color: #7614a8;
+    color: #fff;
+    border-radius: 5px;
+    box-shadow: 7px 6px 28px 1px rgba(148, 137, 137, 0.24);
+    cursor: pointer;
+    outline: none;
+    transition: 0.2s all;
+}
+
+.button:hover {
+    /*background-color: white;*/
+    box-shadow: 7px 6px 28px 1px rgba(232, 225, 225, 0.24);
+
+}
+.button:active {
+    transform: scale(0.98);
+    /* Scaling button to 0.98 to its original size */
+    box-shadow: 3px 2px 22px 1px rgba(30, 29, 29, 0.24);
 }
 
 .default {
-    background: #003300;
+    background-color: #5046a4;
     color: #99ff99;
     outline: none;
 }
@@ -17,65 +36,9 @@
     background: #dd3355;
 }
 
-.button {
-    position: relative;
-    margin: 10px;
-    overflow:hidden;
-    cursor: pointer;
-}
-
-.button::after {
-    display: block;
-    content:'';
-    position: absolute;
-
-    left: -130%;
-    top: 0;
-    height: 100%;
-    width: 20%;
-
-    transform: skew(45deg);
-
-    background-color: #ffffff;
-    opacity: 0.7;
-
-    z-index: 14;
-}
-
-.button:hover::after {
-    animation: blink 0.35s ease;
-}
-
-.button:hover::before {
-    animation: blink 0.35s ease;
-    display: block;
-    content: '';
-    position: absolute;
-
-    left: -100vw;
-    top: 0;
-    height: 100vh;
-    width: 300vw;
-
-    background-color: #ffffff;
-    opacity: 0.2;
-
-    z-index: 7;
-}
-
-.button:focus {
-    outline:#99ff99 solid 1px;
-}
-
-.button:active {
-    background: #99ff99;
-}
-
 .button:disabled {
-    color:#005500;
-    cursor: auto;
+    /*color:#005500;*/
+    opacity: 0.3;
+    cursor: not-allowed;
 }
 
-.button:disabled:after {
-    z-index: -1;
-}
