--- a/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
+++ b/src/p2-homeworks/h4/common/c2-SuperButton/SuperButton.module.css
@@ -1,14 +1,13 @@
 .button {
-    /*display: inline-block;*/
     text-decoration: none;
     border: none;
     padding: 12px 40px;
     margin: 10px;
     font-size: 16px;
     letter-spacing: 2px;
-    background-color: #7614a8;
+    background-color: #02111a;
     color: #fff;
-    border-radius: 5px;
+    border-radius: 8px;
     box-shadow: 7px 6px 28px 1px rgba(148, 137, 137, 0.24);
     cursor: pointer;
     outline: none;
@@ -16,7 +15,6 @@
 }
 
 .button:hover {
-    /*background-color: white;*/
     box-shadow: 7px 6px 28px 1px rgba(232, 225, 225, 0.24);
 
 }
@@ -27,7 +25,7 @@
 }
 
 .default {
-    background-color: #5046a4;
+    background-color: #3928b4;
     color: #99ff99;
     outline: none;
 }
@@ -37,8 +35,7 @@
 }
 
 .button:disabled {
-    /*color:#005500;*/
-    opacity: 0.3;
+    opacity: 0.4;
     cursor: not-allowed;
 }
 
