--- a/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/p2-homeworks/h4/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,7 +1,27 @@
-.checkbox {
-
+.labelContainer {
+    display: flex;
+    align-items: center;
+    margin-left:10px ;
 }
 
-.spanClassName {
+.checkbox {
+    appearance: none;
+    -webkit-appearance: none;
+    width: 25px;
+    height: 25px;
+    border-radius: 2px;
+    background-color: #a5b4ce;
+    border: 2px solid #3928b4;
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+    cursor: pointer;
+    margin-right: 5px;
+}
 
+.checkbox:checked {
+    background-color: #fff;
+    background-image: url('../../../../images/check.png');
+    background-size: cover;
+    border: 2px solid #00b100;
 }
