--- a/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/p2-homeworks/h6/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,9 +1,13 @@
 .editableSpan {
     display: inline-block;
 
-    color: white;
+    height: 30px;
     margin: 10px 0;
+    padding-bottom:10px ;
+
     font-size: larger;
+    color: white;
+    cursor: pointer;
 }
 
 .editableSpan:before {
@@ -13,6 +17,6 @@
     padding-right: 3px;
     vertical-align: middle;
     font-weight: 900;
-    color: black;
+    color: white;
     margin-right: 10px;
 }
