--- a/src/p2-homeworks/h8/HW8.module.css
+++ b/src/p2-homeworks/h8/HW8.module.css
@@ -1,10 +1,13 @@
+.usersContainer {
+    min-height: 150px;
+}
+
 .user {
     width: 200px;
     margin-top: 10px;
 
     display: flex;
     justify-content: space-between;
-
     color: #fff;
 
 }
