--- a/src/p2-homeworks/h8/HW8.module.css
+++ b/src/p2-homeworks/h8/HW8.module.css
@@ -1,5 +1,8 @@
 .usersContainer {
-    min-height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    min-height: 250px;
 }
 
 .user {
@@ -8,6 +11,7 @@
 
     display: flex;
     justify-content: space-between;
+    align-items: flex-start;
     color: #fff;
 
 }
